staticdir = $(pkgdatadir)/static
static_DATA = \
    502.html \
    avatar.png \
    common.css \
    cr.png \
    d3.js \
    DejaVuSans-webfont.eot \
    DejaVuSans-webfont.svg \
    DejaVuSans-webfont.ttf \
    DejaVuSans-webfont.woff \
    ellipsis.png \
    embedtest.html \
    eqbeats.png \
    favicon.ico \
    favicon-pub.ico \
    fileuploader.js \
    logo.png \
    placeholder.jpg \
    player-bg.png \
    player.css \
    player.js \
    robots.txt \
    silhouette.png \
    stats.js \
    style.css \
    ticker.js \
    title-grad.png \
    ytbar.png

SUBDIRS = icons
