iconsdir = $(pkgdatadir)/static/icons
icons_DATA = \
    purple-magnifier.png \
    arrow-up.png \
    plus-circle.png \
    balloon-white-left.png \
    mail.png \
    chain--arrow.png \
    flag.png \
    system-monitor-24.png \
    rename.png \
    fire-small.png \
    disc.png \
    pencil.png \
    star-empty.png \
    drive-download.png \
    youtube-up.png \
    volume.png \
    billboard.png \
    picture.png \
    plus-grey.png \
    users.png \
    feed.png \
    cm-nav.png \
    newspaper.png \
    disc-arrow.png \
    magnifier.png \
    drive-upload.png \
    pp.png \
    download.png \
    edit-number.png \
    cross.png \
    plus.png \
    pp-gray.png \
    arrow-down.png \
    balloon.png \
    vote.png \
    card-pencil.png \
    tag.png \
    balloon-sound.png \
    newspaper-24.png \
    music-minus.png \
    playlist-add.png \
    star.png
