htmldir = $(pkgdatadir)/templates/html
html_DATA = \
    playlist.tpl \
    thanks.tpl \
    404.tpl \
    home.tpl \
    api.tpl \
    events.tpl \
    password-reset.tpl \
    track.tpl \
    faq.tpl \
    player-embed.tpl \
    tracklist.tpl \
    bsod.tpl \
    license.tpl \
    userlist-page.tpl \
    tracklist-page.tpl \
    uploader.tpl \
    account.tpl \
    registration.tpl \
    login.tpl \
    player.tpl \
    avatar.tpl \
    user.tpl \
    page.tpl \
    delete.tpl \
    embed-code.tpl \
    youtube.tpl \
    userlist.tpl
