htmldir = $(templates_dir)/html
html_DATA = \
    playlist.tpl \
    thanks.tpl \
    404.tpl \
    home.tpl \
    api.tpl \
    events.tpl \
    password-reset.tpl \
    track.tpl \
    faq.tpl \
    player-embed.tpl \
    tracklist.tpl \
    bsod.tpl \
    license.tpl \
    userlist-page.tpl \
    tracklist-page.tpl \
    uploader.tpl \
    account.tpl \
    registration.tpl \
    login.tpl \
    player.tpl \
    avatar.tpl \
    user.tpl \
    page.tpl \
    delete.tpl \
    delete-account.tpl \
    embed-code.tpl \
    userlist.tpl \
    goodbye.tpl
