htmldir = $(templates_dir)/html
html_DATA = \
    404.tpl \
    api.tpl \
    avatar.tpl \
    bsod.tpl \
    embed-code.tpl \
    events.tpl \
    faq.tpl \
    home.tpl \
    page.tpl \
    player-embed.tpl \
    player.tpl \
    playlist.tpl \
    thanks.tpl \
    tracklist-page.tpl \
    tracklist.tpl \
    track.tpl \
    userlist-page.tpl \
    userlist.tpl \
    user.tpl
